--- a/buscaminas.html
+++ b/buscaminas.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/bomb.png">
-    <script src="buscaminas.js"></script>
+    <script src="buscaminas.js" defer></script>
     <link rel="stylesheet" href="buscaminas.css">
     <title>Buscaminas</title>
 </head>
 
 <body>
+    <table border="1" id="board"></table>
 </body>
 
 </html>
