feat(buscaminas): Place flags and spread matching mines

--- a/buscaminas.html
+++ b/buscaminas.html
@@ -11,7 +11,7 @@
     <title>Buscaminas</title>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <table border="1" id="board"></table>
 </body>
 
