feat(buscaminas): Restart the game when lose

--- a/buscaminas.html
+++ b/buscaminas.html
@@ -12,7 +12,18 @@
 </head>
 
 <body oncontextmenu="return false;">
-    <table border="1" id="board"></table>
+    <div id="buscaminas">
+        <table border="1" id="board"></table>
+
+        <div id="result" class="sign hide">
+            <div class="fifty">
+                <p id="pResult"></p>
+            </div>
+            <div class="fifty">
+                <button id="restartButton" class="button">Jugar de nuevo</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
