fix(buscaminas): Div result now appears and disappears correctly

--- a/buscaminas.html
+++ b/buscaminas.html
@@ -21,10 +21,12 @@
 
         <table border="1" id="board"></table>
 
-        <div id="result" class="hide">
-            <h2 id="pResult"></h2>
-            <button id="restartButton" class="button">Jugar de nuevo</button>
-        </div>
+        <span id="resultSpan" class="hide">
+            <div id="result">
+                <h2 id="pResult"></h2>
+                <button id="restartButton" class="button">Jugar de nuevo</button>
+            </div>
+        </span>
     </div>
 </body>
 
