feat(index): Restyle the whole table

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </span>
         </div>
 
-        <table border="2" id="board"></table>
+        <div class="border">
+            <table id="board" cellspacing="0"></table>
+        </div>
 
         <span id="resultSpan" class="hide">
             <div id="result">
